--- a/QuanLyHocSinh/GUI/Sprint7/Sprint7Control.xaml
+++ b/QuanLyHocSinh/GUI/Sprint7/Sprint7Control.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="GUI.Sprint7.Sprint7Control"
+﻿<UserControl x:Class="GUI.Sprint7.Sprint7Control"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
