--- a/QuanLyHocSinh/GUI/Sprint3/Sprint3Control.xaml
+++ b/QuanLyHocSinh/GUI/Sprint3/Sprint3Control.xaml
@@ -46,7 +46,7 @@
                 </StackPanel>
 
                 <StackPanel Grid.Column="2" Margin="8,0,8,0">
-                    <TextBlock Text="Họ tên" FontWeight="Bold" Margin="0,0,0,4"/>
+                    <TextBlock Text="Giới Tính" FontWeight="Bold" Margin="0,0,0,4"/>
                     <TextBox x:Name="txb_GioiTinh" Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
                 </StackPanel>
 
@@ -163,8 +163,8 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="Từ" Foreground="Red" FontSize="10" HorizontalAlignment="Center"/>
-                        <TextBlock Grid.Column="1" Text="Đến" Foreground="Red" FontSize="10" HorizontalAlignment="Center"/>
+                        <TextBlock Grid.Column="0" Text="Từ" Foreground="Red" FontSize="13" HorizontalAlignment="Center"/>
+                        <TextBlock Grid.Column="1" Text="Đến" Foreground="Red" FontSize="13" HorizontalAlignment="Center"/>
                     </Grid>
                 </StackPanel>
             </Grid>
